Fix minor issue with drop downs wrapping options

--- a/src/main/webapp/style/tb.css
+++ b/src/main/webapp/style/tb.css
@@ -315,3 +315,7 @@ textarea.showDailyReport {
 .dropdown-content th {
 	white-space: nowrap;
 }
+
+.select2-results__option {
+	white-space: nowrap;
+}
